  (Sébastien Hinderer, review by Xavier Leroy, Nicolás Ojeda Bär and
  Hugo Heuzard)

- #12011: remove Ctype.reified_var_counter
  (Takafumi Saikawa and Jacques Garrigue, review by Gabriel Scherer)

- #12012: move calls to Typetexp.TyVarEnv.reset inside with_local_level etc.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #12034: a logarithmic algorithm to find the next free variable
  (Gabriel Scherer, review by Stefan Muenzel)

- #12092: remove Lev_module_definition from lambda
  (Nick Roberts, review by Gabriel Scherer)

- #12109: Pack parameters to unification in unification_environment
  (Takafumi Saikawa and Jacques Garrigue, review by Richard Eisenberg)

- #12117: Remove arity-interrupting elaboration of module unpacks
  (Nick Roberts, review by Richard Eisenberg and Jacques Garrigue)

- #12118: stop storing names of predefined exceptions in the
  cu_required_globals field of compilation unit descriptors.
  (Sébastien Hinderer, review by Vincent Laviron)

- #12119, #12188, #12191: mirror type constraints on value binding in the
  parsetree:
  the constraint `typ` in `let pat : typ = exp` is now directly stored
  in the value binding node in the parsetree.
  (Florian Angeletti, review by  Richard Eisenberg)

- #12125: Add Misc.print_see_manual and modify [@manual_ref] to accept
  lists for simpler printing of manual references
  (Stefan Muenzel, review by Florian Angeletti)

* #12094: Trigger warning 5 (ignored-partial-application) when the scrutinee of
  a pattern matching is of arrow type and all cases match wildcard or exception
  patterns.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

### Build system:

- #11590: Allow installing to a destination path containing spaces.
   (Élie Brami, review by Sébastien Hinderer and David Allsopp)

- #11243, #11248, #11268, #11420, #11675: merge the sub-makefiles into
  the root Makefile.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)
